tests/pending/pos/t7232b/Test.scala
object Test {
  import pack.*

  Foo.list().packList()
}
